--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "ctrt": "src/index.js"
   },
   "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/01super/ctrt.git"
+  },
   "author": "01super<fk1024@outlook.com>",
   "license": "MIT",
   "dependencies": {
